--- a/css/style.css
+++ b/css/style.css
@@ -11,37 +11,10 @@
     --clr-text: #101012;
     --clr-bg: #ffffff;
     --pd-body: 0 10px;
+    --font-mobile: 13px;
 }
 body{
     padding: 10px 0;
-}
-
-
-.head{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: var(--pd-body);
-}
-.head-text > h2{
-    letter-spacing: 1px;
-    color: var(--clr-primary);
-}
-.head-text > p{
-    font-size: 13px;
-    color: gray;
-}
-
-.search{
-    width: 100%;
-    margin: 20px 0;
-    padding: var(--pd-body);
-}
-.search input{
-    width: 100%;
-    padding: 10px;
-    border-radius: 0.5rem;
-    border: solid gray 1px;
 }
 
 .nav{
@@ -65,60 +38,10 @@ body{
     color: var(--clr-primary);
 }
 
-
-.categories{
-    padding: var(--pd-body);
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    overflow-x: scroll;
-}
-.categories-item{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin: 0 15px;
-}
-.categories-item-circle{
-    width: 70px;
-    height: 70px;
-    border-radius: 50%;
-    background-color: gray;
-}
-
-.content{
-    padding: var(--pd-body);
-    margin: 10px 0;
-    margin-bottom: 60px;
-}
-.card{
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    gap: 10px;
-    line-height: 15px;
-    border: solid rgba(128, 128, 128, 0.315) 1px;
-    border-radius: 0.5rem;
-    padding: 10px;
-    margin: 15px 0;
-}
-.card-photo{
-    flex: 1;
-}
-.card-photo img{
-    width: 100%;
-    border-radius: 1rem;
-}
-.card-text{
-    flex: 1.2;
-    font-size: 13px;
-}
-.card-text  button{
+.btn{
     border: none;
     border-radius: 0.5rem;
     background-color: var(--clr-primary);
     color: var(--clr-bg);
-    padding: 5px 10px;
+    padding: 10px 20px;
 }
