--- a/css/style.css
+++ b/css/style.css
@@ -24,8 +24,7 @@ body{
     position: fixed;
     bottom: 0;
     width: 100%;
-    height: 3rem;
-    padding: var(--pd-body);
+    padding: 20px;
     background-color: var(--clr-bg);
 }
 .nav-btn{
@@ -33,6 +32,9 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+}
+.nav-btn span{
+    font-size: 30px;
 }
 .nav .active{
     color: var(--clr-primary);
